# adbGL

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  adbGL.hpp  glinc.h.in  make_build.sh  make_debug_build.sh
Core/: CMakeLists.txt  Core.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Util.cpp  Util.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.hpp  Window.cpp  Window.hpp
Core/examples/: BasicCube.cpp  BasicTriangle.cpp  CMakeLists.txt
Core/examples/shaders/: base.fs.glsl  base.vs.glsl  diffuse.fs.glsl  diffuse.vs.glsl
Primitives/: CMakeLists.txt  Cube.cpp  Cube.hpp  Mesh.cpp  Mesh.hpp
Shaders/: test_fs.glsl  test_vs.glsl
cmake/: FindSOIL.cmake
core/: CMakeLists.txt  Window.cpp  Window.h
examples/: BasicCube.cpp  BasicTriangle.cpp  CMakeLists.txt
examples/shaders/: base.fs.glsl  base.vs.glsl
shaders/: base.fs.glsl  test_fs.glsl  test_vs.glsl
tests/: BasicCube.cpp  BasicTriangle.cpp  Playground.cpp  WindowTest.cpp
